# dashboard/src/types/api.ts
@@ -26,6 +26,9 @@ export type SdkKey = Schemas['SdkKeyResponse']
 export type SdkKeyCreated = Schemas['SdkKeyCreatedResponse']
 export type SdkKeyCreateRequest = Schemas['SdkKeyCreateRequest']
 export type SdkKeyKind = Schemas['SdkKeyKind']
+export type PersonalAccessToken = Schemas['PersonalAccessTokenResponse']
+export type PersonalAccessTokenCreated = Schemas['PersonalAccessTokenCreatedResponse']
+export type PersonalAccessTokenCreateRequest = Schemas['PersonalAccessTokenCreateRequest']
 
 export type FlagKind = Schemas['FlagKind']
 export type Variation = Schemas['Variation']
